<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

<androidx.cardview.widget.CardView
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="2.5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image_language"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/java3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/language"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:textColor="#008577"
            android:textSize="20sp"
            android:layout_toEndOf="@id/image_language"
            android:layout_toRightOf="@id/image_language" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toEndOf="@id/image_language"
            android:layout_toRightOf="@id/image_language"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="6dp"
                android:fontFamily="sans-serif-black"
                android:text="Didesain"
                android:textColor="#407CB3"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/since"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="35dp"
                android:fontFamily="sans-serif-black"
                android:text="Rilis"
                android:textColor="#407CB3"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="35dp"
                android:fontFamily="sans-serif-black"
                android:text="Untuk"
                android:textColor="#407CB3"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toEndOf="@id/image_language"
            android:layout_toRightOf="@id/image_language"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/author_name"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="6dp"
                android:fontFamily="monospace"
                android:text="@string/author_name"
                android:textColor="#407CB3"
                android:textSize="10sp"/>

            <TextView
                android:id="@+id/since_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="18dp"
                android:fontFamily="monospace"
                android:text="@string/since_number"
                android:textColor="#407CB3"
                android:textSize="10sp"/>

            <TextView
                android:id="@+id/tags_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="35dp"
                android:fontFamily="monospace"
                android:text="@string/tags_title"
                android:textColor="#407CB3"
                android:textSize="10sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/content"
            android:layout_below="@id/layout_title"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>