<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white"
    tools:context=".ProgrammingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/image_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/java3"
                android:layout_weight="1"
                android:layout_marginBottom="3dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/author_pr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-black"
                    tools:text="Didesain"
                    android:textColor="#407CB3"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/author_name_pr"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:fontFamily="monospace"
                    tools:text="@string/author_name"
                    android:textColor="#407CB3"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/since_pr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-black"
                    tools:text="Rilis"
                    android:textColor="#407CB3"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/since_number_pr"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:fontFamily="monospace"
                    tools:text="@string/since_number"
                    android:textColor="#407CB3"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tags_pr"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="11dp"
                    android:fontFamily="sans-serif-black"
                    tools:text="Untuk"
                    android:textColor="#407CB3"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/tags_title_pr"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:fontFamily="monospace"
                    tools:text="@string/tags_title"
                    android:textColor="#407CB3"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="Bahasa Pemrogramman Populer 2019"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">
            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/language_pr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    tools:text="@string/language"
                    android:textColor="#008577"
                    android:textSize="24sp"
                    android:layout_marginLeft="5dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/content_pr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/black"
                        tools:text="@string/content"
                        android:textSize="15sp"
                        android:lineSpacingMultiplier="1"
                        android:layout_gravity="center_horizontal|end" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>